--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "node src/server.js"
+    "start": "node src/server.js",
+    "dev": "nodemon src/server.js"
   },
   "repository": "https://github.com/RafaelaVP/RafaelaVP-companyChallenge",
   "author": "Rafaela Valerio",
@@ -13,5 +14,8 @@
     "express": "^4.17.2",
     "joi": "^17.5.0",
     "mongoose": "^6.1.8"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.15"
   }
 }
