--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "dotenv": "^14.3.0",
     "express": "^4.17.2",
     "joi": "^17.5.0",
-    "mongoose": "^6.1.8"
+    "mongoose": "^6.1.8",
+    "mongoose-paginate-v2": "^1.5.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
