--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dotenv": "^14.3.0",
     "express": "^4.17.2",
     "joi": "^17.5.0",
+    "moment": "^2.29.1",
     "mongoose": "^6.1.8",
     "mongoose-paginate-v2": "^1.5.0"
   },
