--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Rafaela Valerio",
   "license": "MIT",
   "dependencies": {
+    "@joi/date": "^2.1.0",
     "dotenv": "^14.3.0",
     "express": "^4.17.2",
     "joi": "^17.5.0",
