--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-react": "^7.28.0",
+    "jest": "^27.4.7",
     "nodemon": "^2.0.15",
     "prettier": "^2.5.1"
   }
