--- a/package.json
+++ b/package.json
@@ -4,13 +4,15 @@
   "main": "index.js",
   "scripts": {
     "start": "node src/server.js",
-    "dev": "nodemon src/server.js"
+    "dev": "nodemon src/server.js",
+    "test": "cross-env NODE_ENV=test jest --coverage --runInBand"
   },
   "repository": "https://github.com/RafaelaVP/RafaelaVP-companyChallenge",
   "author": "Rafaela Valerio",
   "license": "MIT",
   "dependencies": {
     "@joi/date": "^2.1.0",
+    "cross-env": "^7.0.3",
     "dotenv": "^14.3.0",
     "express": "^4.17.2",
     "joi": "^17.5.0",
@@ -30,6 +32,7 @@
     "eslint-plugin-react": "^7.28.0",
     "jest": "^27.4.7",
     "nodemon": "^2.0.15",
-    "prettier": "^2.5.1"
+    "prettier": "^2.5.1",
+    "supertest": "^6.2.2"
   }
 }
