--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "joi": "^17.5.0",
     "moment": "^2.29.1",
     "mongoose": "^6.1.8",
-    "mongoose-paginate-v2": "^1.5.0"
+    "mongoose-paginate-v2": "^1.5.0",
+    "swagger-ui-express": "^4.3.0"
   },
   "devDependencies": {
     "eslint": "^7.32.0",
